updated scrolling to use greensock

--- a/ecommerce.html
+++ b/ecommerce.html
@@ -30,7 +30,7 @@
 
 <template name="product_stack">
   <div class="product_stack span12 {{_id}}">
-    <img class="product_stack" src="{{img}}" width=400 height=400 />
+    <img class="product_image" src="{{img}}" width=400 height=400 />
     <h1>{{name}}</h1>
     <h2>{{price}}</h2>
   </div>
