--- a/ecommerce.html
+++ b/ecommerce.html
@@ -41,9 +41,9 @@
     <h2>${{price}}</h2>
     </div>
     <div class="btn-group">
-       <button class="btn">Specs</button>
-       <button class="btn">History</button>
-       <button class="btn">Rating</button>
+       <button class="btn specs">Specs</button>
+       <button class="btn usage">Usage</button>
+       <button class="btn reviews">Reviews</button>
       <button class="btn btn-success">Buy</button>
     </div>
   </div>
