--- a/ecommerce.html
+++ b/ecommerce.html
@@ -16,8 +16,8 @@
 </body>
 
 <template name="chooser">
-  <div class="chooser grid-container">
-    <div class="drop-shadow curved">
+  <div class="chooser grid-100 mobile-grid-100">
+    <div class="drop-shadow grid-100 curved mobile-grid-100">
     {{#each products}}
       {{> chooser_button}}
     {{/each}}
