more styling tweaks

--- a/ecommerce.html
+++ b/ecommerce.html
@@ -43,7 +43,7 @@
       <h1>{{name}}</h1>
       <h2>${{price}}</h2>
     </div>
-    <div class="grid-100">
+    <div class="grid-100 mobile-grid-100 group-o-btns">
        <div class="btn specs mobile-grid-25 grid-25">Specs</div>
        <div class="btn usage mobile-grid-25 grid-25">Usage</div>
        <div class="btn reviews mobile-grid-25 grid-25">Reviews</div>
